--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
       </div>
     </div>
+    <div class="test">
+      <div class="overlay"></div>
+    </div>
 
     <div class="container">
 
